--- a/index.css
+++ b/index.css
@@ -1,3 +1,48 @@
-h1{
-    color: rgb(0, 0, 0);
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo{
+    width: 200px;
+}
+
+.nav-items ul {
+    display: flex;
+    font-size: 20px;
+    padding-right: 20px;
+    list-style: none;
+}
+
+.nav-items ul li{
+    padding: 10px;
+    margin: 10px;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.res-card{
+    margin: 15px;
+    border-radius: 10px;
+    width: 200px;
+    height: 350px;
+    padding: 5px;
+}
+.res-card:hover{
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.search{
+    padding: 15px;
+}
+
+.res-logo{
+    width: 100%;
+    height:120px;
+    border-radius: 10px;
+    border-bottom-left-radius: 0;
 }
