--- a/index.css
+++ b/index.css
@@ -46,3 +46,29 @@
   border-radius: 10px;
   border-bottom-left-radius: 0;
 }
+
+.filter-btn {
+  margin: 10px;
+  cursor: pointer;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  width: 200px;
+  margin: 20px;
+  height: 400px;
+  background-color: #f0f0f0;
+}
+
+.login {
+  margin: 10px;
+  height: 50px;
+  width: 100px;
+  font-size: 18px;
+  border-radius: 20px;
+  cursor: pointer;
+}
