--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
@@ -76,4 +76,6 @@
 .user-card {
   padding: 10px;
   border: 1px solid black;
-}
+} */
+
+@import "tailwindcss";
